# insightpulse-odoo

./: .agentignore  .copilotignore  .coverage  .cursorrules  .dockerignore  .editorconfig  .env.example  .env.mattermost.example  .env.mvp.example  .env.odoo18.example  .env.production.example  .envrc  .flake8  .gitattributes  .gitignore  .gitmodules  .hadolint.yaml  .llmrules  .pre-commit-config.yaml  .pylintrc-mandatory  .sqlfluff  ACTIVATE_PULSER_HUB.md  ADDONS.md  AGENT_UPDATE_SPEC.md  APPS_INSTALLATION_GUIDE.md  ARCHITECTURE.md  ARCHITECTURE_IMPLEMENTATION_SUMMARY.md  ARCHITECTURE_REVIEW_REPORT.md  ARCHIVING_STRATEGY.md  AUDIT_SKILL_USAGE.md  AUTOMATION_ARCHITECTURE.md  AUTOMATION_MODES.md  AUTOMATION_STATUS.md  AUTOMATION_SUMMARY.md  BIR_FINANCE_AUDIT_REPORT.md  BI_ANALYTICS_AUDIT_REPORT.md  BRANCH_PROTECTION_SETUP.md  BUILD_DEV_DEPLOY_FAILURES_AUDIT.md  CHANGELOG.md  CICD_DEVOPS_AUDIT_REPORT.md  (+198 more)
.agent/: rules.md
.claude/: mcp-config.json  settings.json  settings.local.json
.continue/: README.md  config.example.json
.cursor/: extensions.json  settings.json  tasks.json
.do/: app.yaml  deploy.sh
.dvc/: config
.extracted-archives/: ARCHIVE_INDEX.md  deduplication-log.txt
.github/: PLANNING.md  PULL_REQUEST_TEMPLATE.md  PULL_REQUEST_TEMPLATE_expense_mvp.md  SECRETS_SETUP.md  SECURITY.md  SLACK_INTEGRATION.md  labeler.yml  labels.yml
.specify/: README.md
.superclaude/: agent_executor.py  config.yml
addons/oca/account-financial-reporting/setup/_metapackage/: pyproject.toml
addons/oca/account-financial-tools/setup/_metapackage/: pyproject.toml
addons/oca/hr-expense/setup/_metapackage/: pyproject.toml
addons/oca/hr/setup/_metapackage/: pyproject.toml
addons/oca/purchase-workflow/setup/_metapackage/: pyproject.toml
addons/oca/reporting-engine/setup/_metapackage/: pyproject.toml
addons/oca/rest-framework/setup/_metapackage/: pyproject.toml
addons/oca/server-backend/setup/_metapackage/: pyproject.toml
addons/oca/server-env/setup/_metapackage/: pyproject.toml
agents/: AGENT_SKILLS_REGISTRY.yaml  Dockerfile.skills  ORCHESTRATOR.md  PRIORITIZED_ROADMAP.md  README.md  REGISTRY.yaml  __init__.py  deployer.py  issue-classifier.py  mcp_config.example.json  mcp_skill_server.py  monitor.py  odoo_reverse_mapper.yaml  run_skill.py  skill_registry.py  skills.yaml
ai/: README.md
ai_stack/: __init__.py  clients.py  config.py  responses.py  runtime.py
airbyte/: odoo-to-supabase.yml
ansible/: README.md
architecture/: README.md
authhub/: Procfile  app.py
auto-healing/: README.md
auto-merge/: .gitignore  QUICKSTART.md  README.md  auto_merge.py  requirements.txt  rollback.sh
auto-patch/: README.md  autopatch.py  rules.yaml
automation/: minimum_viable_automation.md
autopatches/: .gitkeep  README.md
baselines/: v0.2.1-quality-baseline-20251121.txt
bridge_api/: Dockerfile  requirements.txt
bundle/: .env.superset.example  DNS_SETUP.md  INSTALL.md  docker-compose-superset.yml  docker-compose.yml
caddy/: Caddyfile  Caddyfile.with-superset  unsloth.Caddyfile
calendar/: 2026_FinanceClosing_Master.csv  FinanceClosing_RecurringTasks.ics
ci/: automation-health.sh
cicd/: MIGRATION_PLAN.md  README.md  START_HERE.md
claude-code-skills/: Section19.generated.md
claudedocs/: FIN_WORKSPACE_INFRASTRUCTURE_MAP.md  SAAS_PARITY_COMPREHENSIVE_ANALYSIS.md  architectural-analysis.md  conversation-summary-2025-11-01.md
cli/: README.md  setup.py
config/: .env.example  BRANDING_README.md  DESIGN_SYSTEM.md  branding_theme.json  environments.yaml  instance-matrix.yaml  llm-providers.yaml  mattermost_theme.json  odoo.conf  odoo.production.conf  odoo16.conf  odoo17.conf  odoo18_desired_state.json
context-engineering/: README.md
custom_addons/: README.md
data/: month_end_tasks.csv
datasets/: market_caps.yaml  oca_index.json  oca_modules_catalog.json  odoo_sa.json
dbt/: profiles.yml.example  project.yml
deploy/: .env.example  docker-compose.bundle.yml  docker-compose.yml  odoo.bundle.yml  odoo.conf  superset.compose.yml  superset.env.example  superset_config.py
docker/: Caddyfile  Dockerfile  compose.selfhosted.yml  docker-compose.odoo18.yml  docker-compose.yml  entrypoint.sh  mindsdb.compose.yml  mlflow.compose.yml  odoo.conf  openmetadata.compose.yml
docs/: AGENT.md  AGENTIC_ARCHITECTURE.md  AGENTIC_ARCHITECTURE_TARGET.md  AGENT_FRAMEWORK_SESSION_REPORT.md  AGENT_SKILLS.md  AGENT_STACK_RESEARCH.md  AGENT_UPGRADE_SPEC.md  AI_GATEWAY_IMPLEMENTATION.md  AI_POWERED_PUBLICATION_SYSTEM.md  AI_REVIEW_SETUP.md  ARCHITECTURE.md  AUTHENTICATION_GUIDE.md  AUTO-PATCH-GUIDE.md  AUTOMATION_GAP_ANALYZER_STATUS.md  AUTOMATION_STATUS.md  AUTO_HEAL_QUICKSTART.md  BI_ARCHITECTURE.md  BRIDGE.md  CANARY_DEPLOYMENT_GUIDE.md  CICD_METRICS_PIPELINE.md  CI_CD_FIXES_SUMMARY.md  CI_CD_SETUP.md  CLAUDE_CODE_WEB_SKILLS_SETUP.md  COLIMA_SETUP.md  COMPREHENSIVE_ERROR_TROUBLESHOOTING_GUIDE_ODOO18.md  COMPREHENSIVE_ERROR_TROUBLESHOOTING_GUIDE_ODOO19.md  CONFLICT_RESOLUTION.md  CONSOLIDATION_SUMMARY.md  CRON_WEBHOOK_REVIEW.md  DATABASE_UPGRADER.md  DEEPCODE_GITTODOC_REVIEW.md  DEEPCODE_INTEGRATION.md  DEEPWIKI_KNOWLEDGE_STRATEGY.md  DEEPWIKI_SEARCH_RESULTS.md  DEPLOYMENT.md  DEPLOYMENT_CONSOLIDATION.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_GUIDE_OCA.md  DEPLOYMENT_REVIEW.md  DEPLOYMENT_STATUS.md  (+170 more)
eval/: smoke_eval.py
evals/: README.md  requirements.txt
github_app/: webhook_handler.py
guards/: ci_guard_no_floating_images.sh  ci_guard_no_version_branching.sh
infra/: CORE_STACK_README.md  DNS_CONFIGURATION.md  SERVICES.md  UNIFIED_DEPLOYMENT_ARCHITECTURE.md  budget-optimization.md  services.yaml  status.yaml
infrastructure/: README.md
install-waves/: 00_base.txt  10_web_ux.txt  20_sales_inventory.txt  25_localization.txt  30_accounting.txt  40_hr_project.txt  (+2 more)
mcp/deepcode-server/: EXAMPLES.md  README.md  claude_desktop_config.json  install.sh  pyproject.toml  requirements.txt
mcp/deepcode-server/config/: deepcode.config.yaml.example  deepcode.secrets.yaml.example
mcp/deepcode-server/src/: __init__.py  bir_generator.py  deepcode_client.py  server.py  workflows.py
(+2527 files in other folders)
