[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepcode-mcp-server"
version = "1.0.0"
description = "DeepCode MCP Server for InsightPulse AI - Paper2Code + Text2Web + Text2Backend"
authors = [{name = "InsightPulse AI", email = "finance-ssc@insightpulse.ai"}]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=0.1.0",
    "anthropic>=0.18.0",
    "openai>=1.10.0",
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.2.1",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.8.2",
    "tenacity>=8.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.285",
    "mypy>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/jgtolentino/insightpulse-odoo"
Documentation = "https://github.com/jgtolentino/insightpulse-odoo/tree/main/mcp/deepcode-server"
Repository = "https://github.com/jgtolentino/insightpulse-odoo"
Issues = "https://github.com/jgtolentino/insightpulse-odoo/issues"

[project.scripts]
deepcode-mcp = "src.server:main"

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
