[project]
name = "odoo-addons-oca-account-financial-tools"
version = "18.0.20250926.0"
dependencies = [
    "odoo-addon-account_asset_compute_batch==18.0.*",
    "odoo-addon-account_asset_force_account==18.0.*",
    "odoo-addon-account_asset_management==18.0.*",
    "odoo-addon-account_asset_number==18.0.*",
    "odoo-addon-account_asset_transfer==18.0.*",
    "odoo-addon-account_cash_deposit==18.0.*",
    "odoo-addon-account_chart_update==18.0.*",
    "odoo-addon-account_check_deposit==18.0.*",
    "odoo-addon-account_dashboard_banner==18.0.*",
    "odoo-addon-account_dashboard_banner_mis_builder==18.0.*",
    "odoo-addon-account_fiscal_position_vat_check==18.0.*",
    "odoo-addon-account_fiscal_year==18.0.*",
    "odoo-addon-account_fiscal_year_auto_create==18.0.*",
    "odoo-addon-account_invoice_constraint_chronology==18.0.*",
    "odoo-addon-account_journal_general_sequence==18.0.*",
    "odoo-addon-account_journal_lock_date==18.0.*",
    "odoo-addon-account_journal_restrict_mode==18.0.*",
    "odoo-addon-account_lock_date_update==18.0.*",
    "odoo-addon-account_lock_to_date==18.0.*",
    "odoo-addon-account_maturity_date_default==18.0.*",
    "odoo-addon-account_move_fiscal_year==18.0.*",
    "odoo-addon-account_move_line_purchase_info==18.0.*",
    "odoo-addon-account_move_line_sale_info==18.0.*",
    "odoo-addon-account_move_line_tax_editable==18.0.*",
    "odoo-addon-account_move_name_sequence==18.0.*",
    "odoo-addon-account_move_post_date_user==18.0.*",
    "odoo-addon-account_move_print==18.0.*",
    "odoo-addon-account_move_template==18.0.*",
    "odoo-addon-account_netting==18.0.*",
    "odoo-addon-account_sequence_option==18.0.*",
    "odoo-addon-account_spread_cost_revenue==18.0.*",
    "odoo-addon-account_usability==18.0.*",
    "odoo-addon-product_category_tax==18.0.*",
    "odoo-addon-purchase_unreconciled==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
