[project]
name = "odoo-addons-oca-purchase-workflow"
version = "18.0.20251023.0"
dependencies = [
    "odoo-addon-partner_supplierinfo_smartbutton==18.0.*",
    "odoo-addon-procurement_purchase_no_grouping==18.0.*",
    "odoo-addon-product_supplier_code_purchase==18.0.*",
    "odoo-addon-product_supplierinfo_purchase_contact==18.0.*",
    "odoo-addon-purchase_advance_payment==18.0.*",
    "odoo-addon-purchase_all_shipments==18.0.*",
    "odoo-addon-purchase_allowed_product==18.0.*",
    "odoo-addon-purchase_analytic_global==18.0.*",
    "odoo-addon-purchase_blanket_order==18.0.*",
    "odoo-addon-purchase_cancel_reason==18.0.*",
    "odoo-addon-purchase_commercial_partner==18.0.*",
    "odoo-addon-purchase_container==18.0.*",
    "odoo-addon-purchase_default_terms_conditions==18.0.*",
    "odoo-addon-purchase_delivery_split_date==18.0.*",
    "odoo-addon-purchase_deposit==18.0.*",
    "odoo-addon-purchase_exception==18.0.*",
    "odoo-addon-purchase_fop_shipping==18.0.*",
    "odoo-addon-purchase_force_invoiced==18.0.*",
    "odoo-addon-purchase_force_invoiced_quantity==18.0.*",
    "odoo-addon-purchase_invoice_method==18.0.*",
    "odoo-addon-purchase_invoice_plan==18.0.*",
    "odoo-addon-purchase_invoice_status_line==18.0.*",
    "odoo-addon-purchase_last_price_info==18.0.*",
    "odoo-addon-purchase_line_reassign==18.0.*",
    "odoo-addon-purchase_location_by_line==18.0.*",
    "odoo-addon-purchase_lot==18.0.*",
    "odoo-addon-purchase_manual_currency==18.0.*",
    "odoo-addon-purchase_manual_delivery==18.0.*",
    "odoo-addon-purchase_no_rfq==18.0.*",
    "odoo-addon-purchase_open_qty==18.0.*",
    "odoo-addon-purchase_order_archive==18.0.*",
    "odoo-addon-purchase_order_general_discount==18.0.*",
    "odoo-addon-purchase_order_line_menu==18.0.*",
    "odoo-addon-purchase_order_line_original_date==18.0.*",
    "odoo-addon-purchase_order_line_sequence==18.0.*",
    "odoo-addon-purchase_order_line_stock_available==18.0.*",
    "odoo-addon-purchase_order_owner==18.0.*",
    "odoo-addon-purchase_order_product_recommendation==18.0.*",
    "odoo-addon-purchase_order_qty_change_no_recompute==18.0.*",
    "odoo-addon-purchase_order_secondary_unit==18.0.*",
    "odoo-addon-purchase_order_supplierinfo_update==18.0.*",
    "odoo-addon-purchase_order_type==18.0.*",
    "odoo-addon-purchase_order_type_dashboard==18.0.*",
    "odoo-addon-purchase_order_uninvoiced_amount==18.0.*",
    "odoo-addon-purchase_order_uninvoiced_amount_line==18.0.*",
    "odoo-addon-purchase_partner_incoterm==18.0.*",
    "odoo-addon-purchase_partner_selectable_option==18.0.*",
    "odoo-addon-purchase_receipt_expectation==18.0.*",
    "odoo-addon-purchase_reception_notify==18.0.*",
    "odoo-addon-purchase_reception_status==18.0.*",
    "odoo-addon-purchase_reception_status_line==18.0.*",
    "odoo-addon-purchase_representative==18.0.*",
    "odoo-addon-purchase_request==18.0.*",
    "odoo-addon-purchase_request_cancel_confirm==18.0.*",
    "odoo-addon-purchase_request_department==18.0.*",
    "odoo-addon-purchase_request_exception==18.0.*",
    "odoo-addon-purchase_request_substate==18.0.*",
    "odoo-addon-purchase_request_tier_validation==18.0.*",
    "odoo-addon-purchase_request_to_requisition==18.0.*",
    "odoo-addon-purchase_request_type==18.0.*",
    "odoo-addon-purchase_requisition_line_description==18.0.*",
    "odoo-addon-purchase_sale_link_by_origin==18.0.*",
    "odoo-addon-purchase_security==18.0.*",
    "odoo-addon-purchase_stock_manual_currency==18.0.*",
    "odoo-addon-purchase_stock_packaging==18.0.*",
    "odoo-addon-purchase_stock_price_unit_sync==18.0.*",
    "odoo-addon-purchase_stock_reception_status==18.0.*",
    "odoo-addon-purchase_substate==18.0.*",
    "odoo-addon-purchase_tag==18.0.*",
    "odoo-addon-purchase_tier_validation==18.0.*",
    "odoo-addon-purchase_uninvoiced_amount_force_invoiced_line==18.0.*",
    "odoo-addon-purchase_warn_message==18.0.*",
    "odoo-addon-purchase_work_acceptance==18.0.*",
    "odoo-addon-purchase_work_acceptance_invoice_plan==18.0.*",
    "odoo-addon-sale_purchase_force_vendor==18.0.*",
    "odoo-addon-supplier_calendar==18.0.*",
    "odoo-addon-vendor_transport_lead_time==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
