[project]
name = "odoo-addons-oca-server-env"
version = "18.0.20250423.0"
dependencies = [
    "odoo-addon-data_encryption==18.0.*",
    "odoo-addon-mail_environment==18.0.*",
    "odoo-addon-mail_environment_google_gmail==18.0.*",
    "odoo-addon-server_environment==18.0.*",
    "odoo-addon-server_environment_data_encryption==18.0.*",
    "odoo-addon-server_environment_ir_config_parameter==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
